k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: sql
spec:
  selector:
    app: sql
  ports:
  - port: 1433
    targetPort: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql
spec:
  selector:
    matchLabels:
      app: sql
  template:
    metadata:
      labels:
        app: sql
    spec:
      containers:
      - name: sql
        image: mcr.microsoft.com/mssql/server:2019-GA-ubuntu-16.04
        ports:
        - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: distanceapi
spec:
  selector:
    app: distanceapi
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: distanceapi
spec:
  selector:
    matchLabels:
      app: distanceapi
  template:
    metadata:
      labels:
        app: distanceapi
    spec:
      containers:
      - name: distanceapi
        image: distance.azurecr.io/distanceapi:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
