ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: ingress
spec:
  rules:
  - host: <your-ingress>.<region>.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: distanceapi
          servicePort: 80
        path: /(.*)
  tls:
  - hosts:
    - <your-ingress>.<region>.cloudapp.azure.com
    secretName: tls-secret
status:
  loadBalancer:
    ingress:
    - {}
